# fuzz-agent

./: .gitignore  AGENTS.md  AGENT_HARNESS_ROADMAP.md  README.md  TODO.md  WEB_UI_TODO.md  pyproject.toml
demo_targets/: README.md
demo_targets/cwe_oob_write/: CMakeLists.txt  README.md  parser.cc  parser.h
demo_targets/harness_owned_crash/: CMakeLists.txt  README.md  parser.cc
demo_targets/real_target_crash/: CMakeLists.txt  README.md  parser.cc  parser.h
demo_targets/smoke_crash/: CMakeLists.txt  README.md  parser.cc
demo_targets/target_not_reached/: CMakeLists.txt  README.md  parser.cc
fuzz_agent/: __init__.py  cli.py  hitl.py  orchestrator.py
fuzz_agent/agent_harness/: __init__.py  observation.py  policy.py  session.py  trace.py  validators.py
fuzz_agent/chat/: __init__.py  agent.py  memory.py  session.py
fuzz_agent/engines/: __init__.py  atheris.py  base.py  cargo_fuzz.py  coverage.py  libfuzzer.py
fuzz_agent/events/: __init__.py  stream.py
fuzz_agent/sandbox/: __init__.py  base.py  docker.py  none_sandbox.py  nsjail.py
fuzz_agent/state/: __init__.py  models.py  store.py
fuzz_agent/subagents/: __init__.py  _llm.py  _symbolize.py  (+7 more)
tests/: conftest.py  test_agent_harness_session.py  test_analyze.py  test_atheris_engine.py  test_campaign_resume.py  test_cargo_fuzz_engine.py  test_chat_agent.py  test_coverage_builder.py  test_event_bus.py  test_exploit_assessor.py  test_fake_target_samples.py  test_harness_context.py  test_hitl.py  test_libfuzzer_parser.py  test_llm_client.py  test_models.py  test_observe_tools.py  test_orchestrator_agent_harness.py  test_orchestrator_finalize.py  test_store.py  test_strategy.py  test_subagent_imports.py  test_triage_reproduce.py  test_vulnerability_matcher.py  test_web_api.py
(+29 files in other folders)
