[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fuzz-agent"
version = "0.1.0"
description = "Harness-engineering-style fuzzing orchestrator powered by Claude."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40",
    "click>=8.1",
]

[project.optional-dependencies]
aflpp = []
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.10"]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "jinja2>=3.1"]

[project.scripts]
fuzz-agent = "fuzz_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["fuzz_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["fuzz_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
